fixed letter-spacing in tags

--- a/src/Tag/style.css
+++ b/src/Tag/style.css
@@ -12,6 +12,7 @@
     vertical-align: middle;
     cursor: default;
     max-width: 100%;
+    letter-spacing: 0;
 
     & > span {
         text-overflow: ellipsis;
